k8s_practice_yml/aks_file/secret-kv.yml

apiVersion: v1
kind: Pod
metadata:
  name: kv-test-pod
  namespace: test
spec:
  serviceAccountName: zoho-service-account
  containers:
    - name: app
      image: busybox
      command: ["/bin/sh", "-c", "cat /mnt/secrets/secret-sauce && sleep 3600"]
      volumeMounts:
        - name: secrets-store
          mountPath: "/mnt/secrets"
          readOnly: true
  volumes:
    - name: secrets-store
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: azure-keyvault-secrets
