k8s_practice_yml/aks_file/frontend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drstrange-deployment
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drstrangeapp
  template:
    metadata:
      labels:
        app: drstrangeapp
    spec:
      containers:
      - name: drstrange-frontend
        image: doctorstrangelacrregistry.azurecr.io/dr-strange-prod:v1
        resources:
          requests:
            memory: "1Gi"
            cpu: "50m"
          limits:
            memory: "10Gi"
            cpu: "100m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: drstrangesvc
  namespace: test
spec:
  type: ClusterIP
  selector:
    app: drstrangeapp
  ports:
  - port: 80
    targetPort: 80
