k8s_practice_yml/aks_file/ingress_rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule-drstrange-agw
spec:
  ingressClassName: nginx
  rules:
    - host: aksdemo.refactorq.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: drstrangesvc
                port:
                  number: 80
